Bug 45013 - [4.6 regression] Failed to build 483.xalancbmk in SPEC CPU 2006
Summary: [4.6 regression] Failed to build 483.xalancbmk in SPEC CPU 2006
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 4.6.0
: P3 normal
Target Milestone: 4.6.0
Assignee: Richard Biener
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-21 03:15 UTC by H.J. Lu
Modified: 2010-07-21 12:08 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2010-07-21 08:11:52


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2010-07-21 03:15:48 UTC
On Linux/x86-64, revision 162344 gave:

[hjl@gnu-27 build_base_o3.0000]$ /export/gnu/import/svn/gcc-test/usr/bin/g++  -DSPEC_CPU -DNDEBUG  -DAPP_NO_THREADS -DXALAN_INMEM_MSG_LOADER -I. -Ixercesc -Ixercesc/dom -Ixercesc/dom/impl -Ixercesc/sax -Ixercesc/util/MsgLoaders/InMemory -Ixercesc/util/Transcoders/Iconv -Ixalanc/include -DPROJ_XMLPARSER -DPROJ_XMLUTIL -DPROJ_PARSERS -DPROJ_SAX4C -DPROJ_SAX2 -DPROJ_DOM -DPROJ_VALIDATORS -DXML_USE_NATIVE_TRANSCODER -DXML_USE_INMEM_MESSAGELOADER  -O3 -ffast-math -funroll-loops   -DSPEC_CPU_LP64  -DSPEC_CPU_LINUX     StylesheetExecutionContextDefault.cpp StylesheetExecutionContextDefault.cpp: In constructor \u2018xalanc_1_8::StylesheetExecutionContextDefault::StylesheetExecutionContextDefault(xalanc_1_8::XalanNode*, const xalanc_1_8::NodeRefListBase*, const xalanc_1_8::PrefixResolver*)\u2019:
StylesheetExecutionContextDefault.cpp:147:1: internal compiler error: tree check: expected field_decl, have type_decl in gimple_types_compatible_p, at gimple.c:3673
Please submit a full bug report,
with preprocessed source if appropriate.
See <http://gcc.gnu.org/bugs.html> for instructions.
[hjl@gnu-27 build_base_o3.0000]$ 

Revision 162322 is OK.
Comment 1 H.J. Lu 2010-07-21 04:38:24 UTC
Failed with revision 162330 and worked with revision
162328. Revision 162330:

http://gcc.gnu.org/ml/gcc-cvs/2010-07/msg00684.html

is very likely to be the cause.
Comment 2 Richard Biener 2010-07-21 08:11:52 UTC
Mine.
Comment 3 Richard Biener 2010-07-21 11:45:43 UTC
Subject: Bug 45013

Author: rguenth
Date: Wed Jul 21 11:45:27 2010
New Revision: 162371

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=162371
Log:
2010-07-21  Richard Guenther  <rguenther@suse.de>

	PR middle-end/45013
	* tree-ssa.c (useless_type_conversion_p): Dispatch to
	gimple_types_compatible_p only when in lto.
	* gimple.c (gimple_types_compatible_p): Use canonical types
	to speed up comparison.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/gimple.c
    trunk/gcc/tree-ssa.c

Comment 4 Richard Biener 2010-07-21 12:08:29 UTC
Fixed.