2010-07-21  Richard Guenther  <rguenther@suse.de>

PR middle-end/45013
	* tree-ssa.c (useless_type_conversion_p): Dispatch to
	gimple_types_compatible_p only when in lto.
	* gimple.c (gimple_types_compatible_p): Use canonical types
	to speed up comparison.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@162371 138bc75d-0d04-0410-961f-82ee72b054a4